--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.2"
   },
+  "engines": {
+    "node": "8"
+  },
   "devDependencies": {},
   "description": ""
+  
 }
